
[TestDashboardView_ResourceMenuModals/remove_dismiss - 1]
TestDashboardView_ResourceMenuModals/remove_dismiss
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    }
  ]
}
---

[TestDashboardView_ResourceMenuModals/remove_confirm - 1]
TestDashboardView_ResourceMenuModals/remove_confirm
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_ResourceMenuModals/update_purpose_success - 1]
TestDashboardView_ResourceMenuModals/update_purpose_success
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.ExecMenuView",
      "Data": {
        "Type": "ExecMenuView",
        "Handle": "test-ws",
        "ItemCount": 2,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.modal_ExecView",
      "Data": {
        "Type": "ExecView",
        "Handle": "test-ws",
        "Command": "pose",
        "Done": true,
        "RepoCount": 0
      }
    }
  ]
}
---
